--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.32.0
-numpy==1.23.5
+numpy>=1.26.0
 pandas==1.5.3
 nltk==3.6.1
 Scrapy==2.7.1
 textblob==0.17.1
-scikit-learn==1.3.2
+scikit-learn==1.4.1
